--- a/BE/pyproject.toml
+++ b/BE/pyproject.toml
@@ -9,6 +9,8 @@ packages = [{include = "insta_character"}]
 
 [tool.poetry.dependencies]
 python = "^3.10"
+fastapi = "^0.89.0"
+uvicorn = "^0.20.0"
 
 
 [build-system]
