--- a/BE/pyproject.toml
+++ b/BE/pyproject.toml
@@ -10,7 +10,8 @@ packages = [{include = "insta_character"}]
 [tool.poetry.dependencies]
 python = "^3.10"
 fastapi = "^0.89.0"
-uvicorn = "^0.20.0"
+uvicorn = {extras = ["standard"], version = "^0.20.0"}
+requests = "^2.28.1"
 
 
 [build-system]
