fast api connect with mysql

--- a/BE/pyproject.toml
+++ b/BE/pyproject.toml
@@ -12,6 +12,10 @@ python = "^3.10"
 fastapi = "^0.89.0"
 uvicorn = {extras = ["standard"], version = "^0.20.0"}
 requests = "^2.28.1"
+pydantic = "^1.10.4"
+sqlalchemy = "^1.4.46"
+mysql = "^0.0.3"
+pymysql = "^1.0.2"
 
 
 [build-system]
