--- a/BE/pyproject.toml
+++ b/BE/pyproject.toml
@@ -17,6 +17,8 @@ sqlalchemy = "^1.4.46"
 mysql = "^0.0.3"
 pymysql = "^1.0.2"
 openai = "^0.26.4"
+pytest = "^7.2.1"
+httpx = "^0.23.3"
 
 
 [build-system]
